@@ -1,3 +1,10 @@
+2025-02-07  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp-gvfs.el (tramp-gvfs-monitor-process-filter):
+	* tramp-sh.el (tramp-sh-gio-monitor-process-filter)
+	(tramp-sh-inotifywait-process-filter): Use `insert-special-event'
+	if possible.
+
 2025-02-01  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp-cache.el (tramp-connection-properties): Add link to the
